# log_analyzer

./: .gitignore  LICENSE  Logalyzer.cabal  README.md  readme.markdown
src/: GetLogs.hs  Properties.hs  testlog.properties
