name: Logalyzer
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright:
maintainer: Roger Turnau
build-depends: base >= 4.0
stability: Experimental
homepage: https://github.com/rtperson/log_analyzer
package-url:
bug-reports:
synopsis: Java log analysis for the timid
description: 
category: 
author: Roger Turnau
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: Logalyzer
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
